[package]
name = "sshauth"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "SSH key based (agents or static files) authentication tokens"
keywords = ["ssh", "signature", "authentication", "ssh-agent"]
repository = "https://github.com/oxidecomputer/sshauth.git"
homepage = "https://github.com/oxidecomputer/sshauth"

[lib]
doctest = false

[dependencies]
anyhow = "1"
base64 = "0.13"
bincode = "1.3"
bytes = "1"
ecdsa = "0.16"
p256 = "0.13"
postcard = { version = "1", features = ["use-std"] }
serde = { version = "1", features = ["derive"] }
sha2 = "0.10.8"
slog = "2.7"
ssh-encoding = "0.2"
ssh-key = { version = "0.6.7", features = ["p256", "ed25519"] }
tokio = { version = "1", features = ["io-util", "net"] }

[dev-dependencies]
tokio = { version = "1", features = ["io-util", "net", "macros", "rt"] }
